--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><a href="#"><img src="img/l1.jpg" alt=""/></a></li>
 			</ul>
 			<ul>
-				<li></li>
+				<li class='now'></li>
                 <li></li>
                 <li></li>
                 <li></li>
