jdM_分类页完成

--- a/category.html
+++ b/category.html
@@ -204,6 +204,7 @@
 			</div>
 		</div>
 	</main>
+    <script src='js/common.js'></script>
     <script src='js/category.js'></script>
 </body>
 </html>
