--- a/cart.html
+++ b/cart.html
@@ -25,7 +25,7 @@
 				<a href="javascript:;" class='jd_check_box'></a>
 			</div>
 			<div class="shop_con">
-				<img src="img/buy-logo.png" height="47" width="47" class='shop_con_logo' alt="">
+				<img src="img/buy-logo.png" class='shop_con_logo' width='15px' height='14px' alt="">
 				<span class='shop_con_name'>京东自营</span>
 				<span class='shop_con_tip'>您享受满79元免运费服务</span>
 			</div>
@@ -57,7 +57,74 @@
 					</div>
 				</div>
 			</div>
+			<div class="product">
+				<div class="product_check">
+					<a href="javascript:;" class='jd_check_box' checked></a>
+				</div>
+				<div class="product_box">
+					<a href="" class='product_img'>
+						<img src="img/detail01.jpg" alt="">
+					</a>
+					<div class='product_info'>
+						<a href="#" class='product_info_name'>华为（HUAWEI）荣耀平板优享版 Wifi 8英寸平板电脑（高通骁龙 64位四核1280×800 2G/16G 4800mAh）香槟金</a>
+						<p class='product_info_price'>&yen;1000.00</p>
+						<div class='product_info_option clearfix'>
+							<div class='f_left changeNum'>
+								<span>-</span>
+								<!-- 调用数字键盘 -->
+								<input type="tel">
+								<span>+</span>
+							</div>
+							<div class="f_right">
+								<span class='delete_up'></span>
+								<span class='delete_down'></span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="product">
+				<div class="product_check">
+					<a href="javascript:;" class='jd_check_box' checked></a>
+				</div>
+				<div class="product_box">
+					<a href="" class='product_img'>
+						<img src="img/detail01.jpg" alt="">
+					</a>
+					<div class='product_info'>
+						<a href="#" class='product_info_name'>华为（HUAWEI）荣耀平板优享版 Wifi 8英寸平板电脑（高通骁龙 64位四核1280×800 2G/16G 4800mAh）香槟金</a>
+						<p class='product_info_price'>&yen;1000.00</p>
+						<div class='product_info_option clearfix'>
+							<div class='f_left changeNum'>
+								<span>-</span>
+								<!-- 调用数字键盘 -->
+								<input type="tel">
+								<span>+</span>
+							</div>
+							<div class="f_right">
+								<span class='delete_up'></span>
+								<span class='delete_down'></span>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
+
+	<!-- 弹出层 -->
+	<div class="jd_popWin" >
+		<div class="jd_popWin_box bounce">
+			<div class="tit">
+				您确定删除这个商品吗？
+			</div>
+			<div class="con clearfix">
+				<a href="javascript:;" class='cancel'>取消</a>
+				<a href="javascript:;" class='submit'>确定</a>
+			</div>
+		</div>
+	</div>
+
+
 </body>
 </html>
