--- a/cart.html
+++ b/cart.html
@@ -63,7 +63,7 @@
 				</div>
 				<div class="product_box">
 					<a href="" class='product_img'>
-						<img src="img/detail01.jpg" alt="">
+						<img src="img/cp2.jpg" height="194" width="349" alt="">
 					</a>
 					<div class='product_info'>
 						<a href="#" class='product_info_name'>华为（HUAWEI）荣耀平板优享版 Wifi 8英寸平板电脑（高通骁龙 64位四核1280×800 2G/16G 4800mAh）香槟金</a>
@@ -89,7 +89,7 @@
 				</div>
 				<div class="product_box">
 					<a href="" class='product_img'>
-						<img src="img/detail01.jpg" alt="">
+						<img src='img/cp1.jpg' alt="">
 					</a>
 					<div class='product_info'>
 						<a href="#" class='product_info_name'>华为（HUAWEI）荣耀平板优享版 Wifi 8英寸平板电脑（高通骁龙 64位四核1280×800 2G/16G 4800mAh）香槟金</a>
@@ -113,7 +113,7 @@
 	</div>
 
 	<!-- 弹出层 -->
-	<div class="jd_popWin" >
+	<div class="jd_popWin" style='display:none'>
 		<div class="jd_popWin_box bounce">
 			<div class="tit">
 				您确定删除这个商品吗？
@@ -125,6 +125,7 @@
 		</div>
 	</div>
 
-
+<script src='js/common.js'></script>
+<script src='js/cart.js'></script>
 </body>
 </html>
